# OmniDownloader

./: .gitignore  README.ar.md  README.md  eslint.config.js  index.html  install-ubuntu-v2.sh  package.json  pnpm-lock.yaml  setup-linux.sh  tailwind.config.js  vite.config.ts
extension/: background.js  config.js  content.css  content.js  manifest.json  popup.html  popup.js
locales/: README.en.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Downloader.tsx
src/components/atoms/: LogLine.tsx  SortIcon.tsx  ThemeToggle.tsx
src/components/downloader/: BatchTab.tsx  DirectTab.tsx  DownloadTable.tsx  LogViewer.tsx  SearchTab.tsx  SmartAddDialog.tsx  VideoPlayer.tsx  WgetTab.tsx
src/components/molecules/: BatchTab.tsx  DownloadRow.tsx  EmptyDownloadState.tsx  FilterSidebar.tsx  MediaPreview.tsx  PlaylistSelector.tsx  QualitySelector.tsx  SearchResultCard.tsx  StoragePicker.tsx  SubtitleSelector.tsx  TableToolbar.tsx  WgetTab.tsx
src/components/organisms/: DirectTab.tsx  DownloadTable.tsx  Downloader.tsx  LogViewer.tsx  SearchTab.tsx  SmartAddDialog.tsx  VideoPlayer.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useDownloadEngine.ts  useDownloadPath.ts  useDownloader.ts  useLinkAnalyzer.ts  useLogs.ts  useMetadata.ts  useProcessManager.ts  useSearch.ts  useTasks.ts  useYouTubeApi.ts
src/lib/: constants.ts  downloadUtils.ts  linkAnalyzer.ts  utils.ts  youtube.ts  ytdlpArgsBuilder.ts
src/types/: downloader.ts
(+13 files in other folders)
