[package]
name = "omni_downloader"
version = "2.2.0"
description = "A Tauri App for downloading videos"
authors = ["Ahmad Abdelbary"]
edition = "2021"

[lib]
name = "omni_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8"
